--- a/index.html
+++ b/index.html
@@ -11,65 +11,126 @@
 </head>
 
 <body>
-    <div id="game-container">
-        <div id="ui-layer">
-            <div id="score-container">
-                <div class="gift-score-box">
-                    <div class="lid"></div>
-                    <div class="box-body">
-                        <span class="score-label">Score</span>
-                        <span id="score" class="score-value">0</span>
-                    </div>
+    <div id="christmas-bg">
+        <div id="bg-tree"></div>
+    </div>
+    <div id="ui-layer">
+        <div id="score-container">
+            <div class="gift-score-box">
+                <div class="lid">
+                    <span class="score-label">Score</span>
                 </div>
-                <div id="high-score">Best: 0</div>
+                <div class="box-body">
+                    <span id="score" class="score-value">0</span>
+                </div>
             </div>
-            <button id="pause-btn">❚❚</button>
+            <div id="high-score">Best: 0</div>
+        </div>
 
-            <div id="start-screen">
-                <h1>Gift Stacker</h1>
-                <div class="gift-score-box large">
-                    <div class="lid"></div>
-                    <div class="box-body">
-                        <span class="score-label">High Score</span>
-                        <span id="start-high-score" class="score-value">0</span>
-                    </div>
+        <button id="menu-btn" class="icon-btn">⋮</button>
+
+        <!-- Pause Menu Modal -->
+        <div id="pause-menu-modal" class="modal hidden">
+            <h2>Paused</h2>
+            <button id="resume-btn">Resume</button>
+            <button id="quit-game-btn" class="secondary-btn">Quit Game</button>
+            <button id="release-notes-btn" class="text-link">Gift Stacker v0.2</button>
+        </div>
+
+        <!-- Restart Confirmation Modal (Now Quit Confirmation) -->
+        <div id="quit-confirm-modal" class="modal hidden">
+            <h3>Really Quit?</h3>
+            <p>Current game progress will be lost.</p>
+            <div class="modal-actions">
+                <button id="confirm-quit-btn">Yes, Quit</button>
+                <button id="cancel-quit-btn" class="secondary-btn">Cancel</button>
+            </div>
+        </div>
+
+        <!-- Reset Score Confirmation Modal -->
+        <div id="reset-score-modal" class="modal hidden">
+            <h3>Reset High Score?</h3>
+            <div class="modal-actions">
+                <button id="confirm-reset-btn" class="danger-btn">Reset</button>
+                <button id="cancel-reset-btn" class="secondary-btn">Cancel</button>
+            </div>
+        </div>
+
+        <!-- Release Notes Modal -->
+        <div id="release-notes-modal" class="modal hidden">
+            <h2>Release Notes v0.2</h2>
+            <div class="scroll-content">
+                <ul>
+                    <li>🎄 <strong>Christmas Theme:</strong> Realistic snow with flutter & melting, blurred background,
+                        and festive gift colors.</li>
+                    <li>🎨 <strong>UI Polish:</strong> Redesigned scorebug, glassmorphism modals, and improved 3-dot
+                        menu.</li>
+                    <li>⚙️ <strong>New Settings:</strong> Adjust "Bounciness", randomize gift sizes, and game speed
+                        controls.</li>
+                    <li>🔧 <strong>Physics & fixes:</strong> Standardized game speed, cheat-proof high scores, and sync
+                        fixes.</li>
+                </ul>
+            </div>
+            <button id="close-notes-btn">Close</button>
+        </div>
+
+        <div id="start-screen">
+            <h1>Gift Stacker</h1>
+            <div class="gift-score-box large">
+                <div class="lid"></div>
+                <div class="box-body">
+                    <span class="score-label">High Score</span>
+                    <span id="start-high-score" class="score-value">0</span>
                 </div>
-                <button id="start-btn">Start Game</button>
-                <button id="settings-btn" class="secondary-btn">Settings</button>
+            </div>
+            <button id="start-btn">Start Game</button>
+            <button id="settings-btn" class="secondary-btn">Settings</button>
+        </div>
+
+        <div id="settings-modal" class="modal hidden">
+            <h2>Settings</h2>
+            <div class="setting-row">
+                <label>Slide Speed: <span id="slide-speed-val">1.0x</span></label>
+                <input type="range" id="slide-speed" min="0.5" max="2.0" step="0.1" value="1.0">
+            </div>
+            <div class="setting-row">
+                <label>Drop Speed: <span id="drop-speed-val">1.0x</span></label>
+                <input type="range" id="drop-speed" min="0.5" max="2.0" step="0.1" value="1.0">
+            </div>
+            <div class="setting-row">
+                <label>Bounciness: <span id="bounce-val">Normal</span></label>
+                <input type="range" id="bounce" min="0" max="1.0" step="0.1" value="0.5">
+            </div>
+            <div class="setting-row checkbox-row">
+                <input type="checkbox" id="random-sizes">
+                <label for="random-sizes">Randomize Gift Box Sizes</label>
             </div>
 
-            <div id="settings-modal" class="hidden">
-                <h2>Settings</h2>
-                <div class="setting-row">
-                    <label>Slide Speed: <span id="slide-speed-val">1.0x</span></label>
-                    <input type="range" id="slide-speed" min="0.5" max="2.0" step="0.1" value="1.0">
-                </div>
-                <div class="setting-row">
-                    <label>Drop Speed: <span id="drop-speed-val">1.0x</span></label>
-                    <input type="range" id="drop-speed" min="0.5" max="2.0" step="0.1" value="1.0">
-                </div>
-                <button id="close-settings-btn">Save & Close</button>
-            </div>
+            <button id="close-settings-btn">Save</button>
+        </div>
 
-            <div id="game-over-screen" class="hidden">
-                <h1>Game Over</h1>
-                <div id="new-record-msg" class="hidden new-record">New High Score!</div>
-                <div class="gift-score-box large">
-                    <div class="lid"></div>
-                    <div class="box-body">
-                        <span class="score-label">Score</span>
-                        <span id="final-score" class="score-value">0</span>
-                    </div>
+        <div id="game-over-screen" class="hidden">
+            <h1>Game Over</h1>
+            <div id="new-record-msg" class="hidden new-record">New High Score!</div>
+            <div class="gift-score-box large">
+                <div class="lid">
+                    <span class="score-label">Score</span>
                 </div>
-                <div class="actions">
-                    <button id="restart-btn">Try Again</button>
+                <div class="box-body">
+                    <span id="final-score" class="score-value">0</span>
                 </div>
+            </div>
+            <div class="actions">
+                <button id="restart-btn">Try Again</button>
+            </div>
+            <div class="high-score-container">
                 <p id="game-over-high-score">High Score: 0</p>
+                <button id="reset-score-btn" class="reset-link-btn">Reset</button>
             </div>
         </div>
-        <div id="scene">
-            <!-- Physics bodies will be mapped to DOM elements here -->
-        </div>
+    </div>
+    <div id="scene">
+        <!-- Physics bodies will be mapped to DOM elements here -->
     </div>
     <script src="game.js"></script>
 </body>
