--- a/index.html
+++ b/index.html
@@ -64,14 +64,27 @@
 
         <!-- Release Notes Modal -->
         <div id="release-notes-modal" class="modal hidden">
-            <h2>Release Notes v0.2</h2>
+            <h2>Release Notes v0.3</h2>
             <div class="scroll-content">
+                <h3>v0.3 - The Polish Update</h3>
                 <ul>
                     <li>🎉 <strong>v0.3 Update:</strong> New "Standard" Blue Theme, sharper graphics, and improved
                         sound!</li>
                     <li>🎹 <strong>Controls:</strong> Use Space to drop, Enter to Start, and Esc to Pause.</li>
                     <li>🔊 <strong>Audio:</strong> New sound effects and a toggle in the Pause menu.</li>
                     <li>🔧 <strong>Fixes:</strong> Better performance and UI polish.</li>
+                </ul>
+                <hr style="margin: 15px 0; border: 0; border-top: 1px solid #ddd;">
+                <h3>v0.2 - The Core Update</h3>
+                <ul>
+                    <li>🎄 <strong>Christmas Theme:</strong> Realistic snow with flutter & melting, blurred background,
+                        and festive gift colors.</li>
+                    <li>🎨 <strong>UI Polish:</strong> Redesigned scorebug, glassmorphism modals, and improved 3-dot
+                        menu.</li>
+                    <li>⚙️ <strong>New Settings:</strong> Adjust "Bounciness", randomize gift sizes, and game speed
+                        controls.</li>
+                    <li>🔧 <strong>Physics & fixes:</strong> Standardized game speed, cheat-proof high scores, and sync
+                        fixes.</li>
                 </ul>
             </div>
             <button id="close-notes-btn">Close</button>
