--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <button id="quit-game-btn" class="secondary-btn">Quit Game</button>
-            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4</button>
+            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.2</button>
         </div>
 
         <!-- Restart Confirmation Modal (Now Quit Confirmation) -->
@@ -68,8 +68,14 @@
 
         <!-- Release Notes Modal -->
         <div id="release-notes-modal" class="modal hidden">
-            <h2>Release Notes v0.4</h2>
+            <h2>Release Notes v0.4.2</h2>
             <div class="scroll-content">
+                <h3>v0.4.2 - Tuning & Polish</h3>
+                <ul>
+                    <li>🎨 <strong>Visuals:</strong> Green score text and cleaner menus.</li>
+                    <li>⚖️ <strong>Balance:</strong> Platform width now scales with difficulty (Easy is wider!).</li>
+                </ul>
+                <hr>
                 <h3>v0.4 - The Gameplay Update</h3>
                 <ul>
                     <li>🎮 <strong>Lives System:</strong> You now have lives! Don't let the gifts fall. (5 for Easy, 3
