--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <button id="quit-game-btn" class="secondary-btn">Quit Game</button>
-            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.4</button>
+            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.5</button>
         </div>
 
         <!-- Restart Confirmation Modal (Now Quit Confirmation) -->
@@ -68,8 +68,16 @@
 
         <!-- Release Notes Modal -->
         <div id="release-notes-modal" class="modal hidden">
-            <h2>Release Notes v0.4.4</h2>
+            <h2>Release Notes v0.4.5</h2>
             <div class="scroll-content">
+                <h3>v0.4.5 - The Odometer Update</h3>
+                <ul>
+                    <li>🔢 <strong>Smart Scoring:</strong> New "CountUp" animation makes every point feel rewarding.
+                    </li>
+                    <li>✨ <strong>Subtle Pulse:</strong> Score gently pulses on update for better visibility.</li>
+                    <li>🐛 <strong>Stability:</strong> Fixed crashes related to game over screens.</li>
+                </ul>
+                <hr>
                 <h3>v0.4.4 - The Polish Update II</h3>
                 <ul>
                     <li>🐛 <strong>Scoring Fixes:</strong> Fixed live score bugs and splash screen glitches.</li>
@@ -119,7 +127,7 @@
         </div>
 
         <div id="start-screen">
-            <h1>Gift Stacker</h1>
+            <h1>Gift Stacker <span class="version-tag">v0.4.5</span></h1>
             <h2>Stack the gifts as high as you can!</h2>
             <div class="gift-score-box large">
                 <div class="lid">
