--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
 
             <button id="quit-game-btn" class="secondary-btn">Quit Game</button>
-            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.6</button>
+            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.7</button>
         </div>
 
         <!-- Quit Confirmation Modal -->
@@ -72,9 +72,15 @@
 
         <!-- Release Notes Modal -->
         <div id="release-notes-modal" class="modal hidden">
-            <h2>Release Notes v0.4.6</h2>
+            <h2>Release Notes v0.4.7</h2>
             <div class="scroll-content">
-                <h3>v0.4.6 - Stability Update</h3>
+                <h3>v0.4.7 - UI Size Update</h3>
+                <ul>
+                    <li>🔢 <strong>Big Scores:</strong> Increased score number sizes by 40% for better visibility!</li>
+                    <li>🛡️ <strong>Safety Release:</strong> Checkpoint commit to ensure stability.</li>
+                </ul>
+                <hr>
+                <h3>v0.4.6 - Stability Release</h3>
                 <ul>
                     <li>🚑 <strong>Critical Fixes:</strong> Restored missing menus (Pause, Quit, Reset) that were
                         accidentally lost.</li>
