--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             </div>
         </div>
 
+        <div id="timer-container" class="hidden">
+            <div id="timer-bar"></div>
+        </div>
+
         <button id="menu-btn" class="icon-btn">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                 <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" />
@@ -48,7 +52,7 @@
             </div>
 
             <button id="quit-game-btn" class="secondary-btn">Quit Game</button>
-            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.7</button>
+            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.8</button>
         </div>
 
         <!-- Quit Confirmation Modal -->
@@ -72,8 +76,14 @@
 
         <!-- Release Notes Modal -->
         <div id="release-notes-modal" class="modal hidden">
-            <h2>Release Notes v0.4.7</h2>
+            <h2>Release Notes v0.4.8</h2>
             <div class="scroll-content">
+                <h3>v0.4.8 - The Pressure Update</h3>
+                <ul>
+                    <li>⏳ <strong>Drop Timer:</strong> Added urgency! 10s for Standard, 6s for Hard.</li>
+                    <li>🚦 <strong>Visual Bar:</strong> Watch the timer bar change from Green to Red!</li>
+                </ul>
+                <hr>
                 <h3>v0.4.7 - UI Size Update</h3>
                 <ul>
                     <li>🔢 <strong>Big Scores:</strong> Increased score number sizes by 40% for better visibility!</li>
