--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <button id="quit-game-btn" class="secondary-btn">Quit Game</button>
-            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.10</button>
+            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.11</button>
         </div>
 
         <!-- Quit Confirmation Modal -->
@@ -78,8 +78,13 @@
 
         <!-- Release Notes Modal -->
         <div id="release-notes-modal" class="modal hidden">
-            <h2>Release Notes v0.4.10</h2>
+            <h2>Release Notes v0.4.11</h2>
             <div class="scroll-content">
+                <h3>v0.4.11 - Visual Tuning</h3>
+                <ul>
+                    <li>⏱️ <strong>Timer Tweak:</strong> Added +1s to Standard/Hard timers & fixed visual glitches.</li>
+                </ul>
+                <hr>
                 <h3>v0.4.10 - Physics & Help</h3>
                 <ul>
                     <li>🏗️ <strong>Heavy Lifting:</strong> Boxes are 5x heavier and stickier for satisfying stacks!
