--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
 
         <div id="toast" class="hidden"></div>
+        <div id="debug-stats" class="hidden"></div>
 
         <div id="timer-container" class="hidden">
             <div id="timer-bar"></div>
@@ -54,7 +55,7 @@
             </div>
 
             <button id="quit-game-btn" class="secondary-btn">Quit Game</button>
-            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.11</button>
+            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.12</button>
         </div>
 
         <!-- Quit Confirmation Modal -->
@@ -78,8 +79,13 @@
 
         <!-- Release Notes Modal -->
         <div id="release-notes-modal" class="modal hidden">
-            <h2>Release Notes v0.4.11</h2>
+            <h2>Release Notes v0.4.12</h2>
             <div class="scroll-content">
+                <h3>v0.4.12 - Debugging Tools</h3>
+                <ul>
+                    <li>🐞 <strong>Debug Display:</strong> Added bottom-left stats to help tune physics.</li>
+                </ul>
+                <hr>
                 <h3>v0.4.11 - Visual Tuning</h3>
                 <ul>
                     <li>⏱️ <strong>Timer Tweak:</strong> Added +1s to Standard/Hard timers & fixed visual glitches.</li>
