--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
             <button id="quit-game-btn" class="secondary-btn">Quit Game</button>
-            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.4.14</button>
+            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.5.0</button>
         </div>
 
         <!-- Quit Confirmation Modal -->
@@ -85,14 +85,21 @@
 
         <!-- Release Notes Modal -->
         <div id="release-notes-modal" class="modal hidden">
-            <h2>Release Notes v0.4.14</h2>
+            <h2>Release Notes v0.5.0</h2>
             <div class="scroll-content">
+                <h3>v0.5.0 - The "Polish" Update 🎁</h3>
+                <ul>
+                    <li>🚀 <strong>Major Milestone:</strong> Complete visual and physics overhaul.</li>
+                    <li>🎨 <strong>Visuals:</strong> New 'Chewy' & 'Outfit' typography, refined layout, and animations.
+                    </li>
+                    <li>🔢 <strong>Odometer Scoring:</strong> Slick new score transitions (up/down).</li>
+                    <li>⚖️ <strong>Physics 2.0:</strong> "Anti-Rubber" tuning for precise stacking.</li>
+                </ul>
+                <hr>
                 <h3>v0.4.14 - Visual Polish & Font Update</h3>
                 <ul>
                     <li>🔠 <strong>Typography:</strong> Updated fonts to 'Chewy' and 'Outfit' for a better look.</li>
                     <li>🎨 <strong>UI Tweaks:</strong> Improved spacing, consistent font sizes, and cleaner layout.</li>
-                    <li>⚖️ <strong>Physics Tuning:</strong> Fine-tuned bounce for all difficulties.</li>
-                    <li>🧹 <strong>Cleanup:</strong> Removed debug display and improved splash screen.</li>
                 </ul>
                 <hr>
                 <h3>v0.4.13 - Visual Identity</h3>
@@ -214,7 +221,7 @@
                 </button>
             </div>
 
-            <div class="version-info">v0.4.14</div>
+            <div class="version-info">v0.5.0</div>
         </div>
 
         <div id="fps-counter">60</div>
