--- a/index.html
+++ b/index.html
@@ -212,16 +212,36 @@
             <!-- High Score Removed -->
             <div class="start-actions">
                 <button id="start-btn">Start Game</button>
-                <button id="settings-btn" class="icon-btn-settings" title="Settings">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                        viewBox="0 0 24 24"><!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE -->
-                        <path fill="currentColor"
-                            d="M10.825 22q-.675 0-1.162-.45t-.588-1.1L8.85 18.8q-.325-.125-.612-.3t-.563-.375l-1.55.65q-.625.275-1.25.05t-.975-.8l-1.175-2.05q-.35-.575-.2-1.225t.675-1.075l1.325-1Q4.5 12.5 4.5 12.337v-.675q0-.162.025-.337l-1.325-1Q2.675 9.9 2.525 9.25t.2-1.225L3.9 5.975q.35-.575.975-.8t1.25.05l1.55.65q.275-.2.575-.375t.6-.3l.225-1.65q.1-.65.588-1.1T10.825 2h2.35q.675 0 1.163.45t.587 1.1l.225 1.65q.325.125.613.3t.562.375l1.55-.65q.625-.275 1.25-.05t.975.8l1.175 2.05q.35.575.2 1.225t-.675 1.075l-1.325 1q.025.175.025.338v.674q0 .163-.05.338l1.325 1q.525.425.675 1.075t-.2 1.225l-1.2 2.05q-.35.575-.975.8t-1.25-.05l-1.5-.65q-.275.2-.575.375t-.6.3l-.225 1.65q-.1.65-.587 1.1t-1.163.45zM11 20h1.975l.35-2.65q.775-.2 1.438-.587t1.212-.938l2.475 1.025l.975-1.7l-2.15-1.625q.125-.35.175-.737T17.5 12t-.05-.787t-.175-.738l2.15-1.625l-.975-1.7l-2.475 1.05q-.55-.575-1.212-.962t-1.438-.588L13 4h-1.975l-.35 2.65q-.775.2-1.437.588t-1.213.937L5.55 7.15l-.975 1.7l2.15 1.6q-.125.375-.175.75t-.05.8q0 .4.05.775t.175.75l-2.15 1.625l.975 1.7l2.475-1.05q.55.575 1.213.963t1.437.587zm1.05-4.5q1.45 0 2.475-1.025T15.55 12t-1.025-2.475T12.05 8.5q-1.475 0-2.487 1.025T8.55 12t1.013 2.475T12.05 15.5M12 12" />
-                    </svg>
-                </button>
+                <div class="sub-actions">
+                    <button id="shop-btn" class="icon-btn-settings" title="Shop">
+                        🛍️
+                    </button>
+                    <button id="leaderboard-btn" class="icon-btn-settings" title="Leaderboard">
+                        🏆
+                    </button>
+                    <button id="settings-btn" class="icon-btn-settings" title="Settings">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                            viewBox="0 0 24 24"><!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE -->
+                            <path fill="currentColor"
+                                d="M10.825 22q-.675 0-1.162-.45t-.588-1.1L8.85 18.8q-.325-.125-.612-.3t-.563-.375l-1.55.65q-.625.275-1.25.05t-.975-.8l-1.175-2.05q-.35-.575-.2-1.225t.675-1.075l1.325-1Q4.5 12.5 4.5 12.337v-.675q0-.162.025-.337l-1.325-1Q2.675 9.9 2.525 9.25t.2-1.225L3.9 5.975q.35-.575.975-.8t1.25.05l1.55.65q.275-.2.575-.375t.6-.3l.225-1.65q.1-.65.588-1.1T10.825 2h2.35q.675 0 1.163.45t.587 1.1l.225 1.65q.325.125.613.3t.562.375l1.55-.65q.625-.275 1.25-.05t.975.8l1.175 2.05q.35.575.2 1.225t-.675 1.075l-1.325 1q.025.175.025.338v.674q0 .163-.05.338l1.325 1q.525.425.675 1.075t-.2 1.225l-1.2 2.05q-.35.575-.975.8t-1.25-.05l-1.5-.65q-.275.2-.575.375t-.6.3l-.225 1.65q-.1.65-.587 1.1t-1.163.45zM11 20h1.975l.35-2.65q.775-.2 1.438-.587t1.212-.938l2.475 1.025l.975-1.7l-2.15-1.625q.125-.35.175-.737T17.5 12t-.05-.787t-.175-.738l2.15-1.625l-.975-1.7l-2.475 1.05q-.55-.575-1.212-.962t-1.438-.588L13 4h-1.975l-.35 2.65q-.775.2-1.437.588t-1.213.937L5.55 7.15l-.975 1.7l2.15 1.6q-.125.375-.175.75t-.05.8q0 .4.05.775t.175.75l-2.15 1.625l.975 1.7l2.475-1.05q.55.575 1.213.963t1.437.587zm1.05-4.5q1.45 0 2.475-1.025T15.55 12t-1.025-2.475T12.05 8.5q-1.475 0-2.487 1.025T8.55 12t1.013 2.475T12.05 15.5M12 12" />
+                        </svg>
+                    </button>
+                </div>
             </div>
 
-            <div class="version-info">v0.5.0</div>
+            <div class="version-info">v0.6 | Gift Stacker</div>
+        </div>
+
+        <!-- Shop Modal -->
+        <div id="shop-modal" class="modal hidden">
+            <h2>🎁 Gift Shop</h2>
+            <div class="shop-header">
+                <span>🍪 You have <span id="shop-bank-display">0</span> cookies</span>
+            </div>
+            <div id="shop-items-container">
+                <!-- Populated by JS -->
+            </div>
+            <button id="close-shop-btn">Close</button>
         </div>
 
         <div id="fps-counter">60</div>
@@ -298,6 +318,44 @@
     <div id="scene">
         <!-- Physics bodies will be mapped to DOM elements here -->
     </div>
+    <!-- Firebase SDKs (Compat for simplicity) -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+
+    <!-- Game Scripts -->
+    <script src="firebase-config.js"></script>
+    <script src="leaderboard.js"></script>
+    <script src="snowSystem.js"></script>
+
+    <!-- Leaderboard Modal -->
+    <div id="leaderboard-modal" class="modal hidden">
+        <h2>Top 10 Scores</h2>
+
+        <div id="leaderboard-container">
+            <ul id="leaderboard-list">
+                <!-- Populated by JS -->
+                <li class="loading">Loading...</li>
+            </ul>
+        </div>
+
+        <div class="leaderboard-controls">
+            <button id="close-leaderboard-btn" class="btn">Close</button>
+        </div>
+    </div>
+
+    <!-- Submit Score Modal -->
+    <div id="submit-score-modal" class="modal hidden">
+        <h2>🏆 New High Score!</h2>
+        <p id="submit-score-msg">You scored <span id="submit-score-val">0</span>!</p>
+
+        <input type="text" id="player-name-input" placeholder="Enter your name" maxlength="12">
+
+        <div class="modal-buttons" style="display: flex; gap: 10px; justify-content: center; margin-top: 15px;">
+            <button id="submit-score-btn" class="btn primary-btn">Submit</button>
+            <button id="skip-submit-btn" class="secondary-btn">Skip</button>
+        </div>
+    </div>
+
     <script src="game.js"></script>
 </body>
 
